--- a/pom.xml
+++ b/pom.xml
@@ -426,6 +426,22 @@
                             <failOnSeverity>none</failOnSeverity>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.ossindex.maven</groupId>
+                        <artifactId>ossindex-maven-plugin</artifactId>
+                        <configuration>
+                            <fail>false</fail>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>audit-dependencies</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>audit</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -553,19 +569,6 @@
                                     </rules>
                                     <fail>true</fail>
                                 </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.sonatype.ossindex.maven</groupId>
-                        <artifactId>ossindex-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>audit-dependencies</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>audit</goal>
-                                </goals>
                             </execution>
                         </executions>
                     </plugin>
